--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": "12.x"
   },
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "lint": "jshint --exclude node_modules .",
