--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "puppeteer": "^5.4.1",
+    "inspector":"^0.5.0"
   },
   "devDependencies": {
     "got": "^11.3.0",
