--- a/package.json
+++ b/package.json
@@ -15,20 +15,13 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "puppeteer": "^5.4.1",
-    "inspector":"^0.5.0"
+    "node-inspector":"1.1.2"
   },
-  "devDependencies": {
-    "got": "^11.3.0",
-    "tape": "^4.7.0"
-  },
+
   "repository": {
     "type": "git",
     "url": "https://github.com/heroku/node-js-getting-started"
   },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
+
   "license": "MIT"
 }
